Corrects alert spacing in registration

--- a/app/assets/stylesheets/devise/registrations-new.sass
+++ b/app/assets/stylesheets/devise/registrations-new.sass
@@ -22,3 +22,6 @@
     text-align: center
     color: $text-color-1
     font-size: 0.8em
+
+	.alert-danger
+		margin-bottom: 0
